Fix colour of selects in the footer and realign chevrons for svg

--- a/app/assets/stylesheets/_globalnav/_core/_dropdown.sass
+++ b/app/assets/stylesheets/_globalnav/_core/_dropdown.sass
@@ -27,7 +27,7 @@
   padding: 10px 20px 10px 10px
   white-space: nowrap
 
-  .standout &
+  .standout &, .wrap--footer &
     background-color: #fff
 
   &:after
@@ -50,6 +50,7 @@
       content: ''
       height: 100%
       right: 10px
+      top: 0
 
 .dropdown__select
   +appearance(menulist-button)
